test_regress/t/t_castdyn_bad.out
%Error-UNSUPPORTED: t/t_castdyn_bad.v:20:11: Unsupported: $cast. Suggest try static cast.
                                           : ... In instance t
   20 |       i = $cast(c, b);
      |           ^~~~~
%Error-UNSUPPORTED: t/t_castdyn_bad.v:23:7: Unsupported: $cast. Suggest try static cast.
                                          : ... In instance t
   23 |       $cast(c, b);   
      |       ^~~~~
%Error: Exiting due to
